--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "prisma": "^5.14.0",
     "react-router-dom": "^6.23.1",
     "session-file-store": "^1.5.0"
   },
